--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8080
 # DataSource settings
 spring.datasource.url = jdbc:mysql://localhost:3306/ppi_2?autoReconnect=true&useSSL=false
 spring.datasource.username = root
-spring.datasource.password = &We849211Tn&
+spring.datasource.password = root
 
 # Show or not log for each sql query
 spring.jpa.show-sql = true
