--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.servlet.contextPath=/app
 server.port=8080
 
 # DataSource settings
-spring.datasource.url = jdbc:mysql://localhost:3306/ppi_2?autoReconnect=true&useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/hertzdb?autoReconnect=true&useSSL=false
 spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.password = oooDOgdT-31X
 
 # Show or not log for each sql query
 spring.jpa.show-sql = true
